# VILMA

./: CMakeLists.txt  README.md  build.sh  build_local.sh  compile_mex.m  contributors.txt  data.cpp  data.h  dense_vector.h  dense_vector.hpp  evaluators.hpp  experiments.txt  generate_jobs.py  generate_txt_file.cpp  generate_txt_file.h  loss.h  main.cpp  model_evaluator.h  model_evaluator.hpp  mvilma_mex.cc  param.txt  report_resuts.cpp  sparse_matrix.h  sparse_matrix.hpp  sparse_vector.h  sparse_vector.hpp  test_vilma.cpp  train_pw_vilma.cpp  train_vilma.cpp  vector_interface.h  vilma.m
bmrm/: bmrm_solver.cpp  bmrm_solver.h  libqp.h  libqp_splx.cpp
cmake/Modules/: mex.cmake
data/: run_demo.sh
oracle/: accpm_constrained_theta_tail_parameters_oracle.cpp  accpm_constrained_theta_tail_parameters_oracle.h  accpm_parameters_builder.cpp  accpm_parameters_builder.h  accpm_tail_parameters_oracle.cpp  accpm_tail_parameters_oracle.h  bmrm_oracle_wrapper.h  mord.cpp  mord.h  mord.hpp  mord_regularized.cpp  mord_regularized.h  mord_regularized.hpp  ordinal_regression.cpp  ordinal_regression.h  ordinal_regression.hpp  pw_mord.h  pw_mord.hpp  pw_mord_no_beta_bmrm_oracle.cpp  pw_mord_no_beta_bmrm_oracle.h  pw_mord_regularized.cpp  pw_mord_regularized.h  pw_mord_regularized.hpp  pw_single_gender_no_beta_bmrm_oracle.cpp  pw_single_gender_no_beta_bmrm_oracle.h  pw_vilma.h  pw_vilma.hpp  pw_vilma_regularized.cpp  pw_vilma_regularized.h  pw_vilma_regularized.hpp  sgd_age_oracle.h  sgd_age_oracle.hpp  sgd_tight_gender_supervised_oracle.h  sgd_tight_gender_supervised_oracle.hpp  single_gender_no_beta_bmrm_oracle.cpp  single_gender_no_beta_bmrm_oracle.h  single_gender_no_theta_exp_bmrm_oracle.cpp  single_gender_no_theta_exp_bmrm_oracle.h  svor_exp.cpp  svor_exp.h  (+14 more)
